# strandmap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: agent-integration.md  annotations.md  configuration.md  metadata.md  migration.md
examples/demo/: README.md
examples/demo/.strandmap/: .gitignore
examples/demo/.strandmap/anchors/: contracts.yaml
examples/demo/.strandmap/strands/: session-token-format.yaml
examples/demo/docs/: authentication.md
examples/demo/schema/: session-token.json
examples/demo/src/: auth.rs
src/: annotations.rs  cli.rs  commands.rs  config.rs  context_output.rs  git.rs  graph.rs  index.rs  lib.rs  main.rs  metadata.rs  migration.rs  model.rs  output.rs  repo.rs  review.rs  search.rs  source_span.rs
tests/: cli.rs
