[package]
name = "strandmap"
version = "1.3.1"
edition = "2024"
rust-version = "1.85"
description = "A version-controlled relationship graph for code, documentation, configuration, and tests"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/strandmap"
keywords = ["code-analysis", "traceability", "agents", "cli", "graph"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "src/**",
    "tests/**",
    "docs/**",
    "examples/demo/README.md",
    "examples/demo/docs/**",
    "examples/demo/schema/**",
    "examples/demo/src/**",
    "examples/demo/.strandmap/.gitignore",
    "examples/demo/.strandmap/config.yaml",
    "examples/demo/.strandmap/anchors/**",
    "examples/demo/.strandmap/strands/**",
    "examples/demo/.strandmap/relations/**",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "LICENSE",
    "rustfmt.toml",
]

[[bin]]
name = "strandmap"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.6"
clap_mangen = "0.2"
ignore = "0.4"
globset = "0.4"
fs2 = "0.4"
regex = "1.12"
schemars = { version = "1.2", features = ["chrono04", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
shlex = "2.0"
tempfile = "3.27"
toml = "1.1"
tree-sitter = "0.26.11"
tree-sitter-bash = "0.25.1"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
uuid = { version = "1.21", features = ["serde", "v7"] }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
